# ultrassom

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
backend/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
backend/scripts/: build
backend/sql/: 001_images_init.sql  001_init.sql  001_users_init.sql
backend/src/: ModelMatrix.hpp  Server.hpp  main.cpp
backend/src/Algorithm/: CGNESolver.cpp  CGNESolver.hpp  CGNRSolver.cpp  CGNRSolver.hpp  Config.hpp  Factory.hpp  ISolver.hpp  Settings.hpp
backend/src/Component/: App.hpp  Database.hpp  ModelMatrix.hpp  Schedule.hpp  Service.hpp
backend/src/Controller/: ImageController.hpp  Ultrasound.hpp  UserController.hpp
backend/src/Dto/: Event.hpp  Image.hpp  User.hpp
backend/src/Parser/: CSVFileParser.hpp  CSVParser.hpp
backend/src/Persistence/: ImageDb.hpp  UserDb.hpp
backend/src/Persistence/Repository/: ImageDb.hpp  UserDb.hpp
backend/src/Schedule/: Scheduler.hpp  UltrasoundTask.hpp
backend/src/Scheduler/: SchedulerQueue.hpp
backend/src/Service/: ImageService.hpp  SchedulerService.hpp  StaticFilesService.hpp  UserService.hpp
backend/src/Service/WS/: Client.hpp  ClientConnectionListener.hpp
backend/src/Task/: ProcessImage.hpp  ProcessImageEmitter.hpp
backend/src/Util/: ImageGeneration.hpp  Time.hpp  Uuid.hpp
docs/: API.md
frontend/: README.md  api.py  main.py  processing.py  requirements.txt  staging.py
frontend/html/: handle.js  index.html  index.js  modal.css  style.css
python/: README.md  api.py  main.py  staging.py
sql/: 001_init.sql
src/: AlgebraState.hpp  AppComponent.hpp  main.cpp
(+21 files in other folders)
